<resources>
    <string name="app_name">AndroidCourseShpp</string>
    <string name="channel_description">Used to view information about deleted or added contacts</string>
    <string name="view_contact_details" translatable="false">VIEW CONTACT DETAILS</string>

    <!-- Notifications -->
    <string name="add_contact_notif_title">New Contact</string>
    <string name="add_contact_notif_content">%1$s was added to contacts</string>
    <string name="delete_contact_notif_title">Delete Contact</string>
    <string name="delete_contact_notif_content">%1$s was deleted from contacts</string>
    <string name="add_contact_toast_message">New contact was added</string>
    <string name="delete_contact_toast_message">Contact was deleted</string>
    <string name="view_details_label" translatable="false">VIEW DETAILS</string>


    <!-- Error -->
    <string name="backend_error">Server error</string>
    <string name="server_response_error">Something went wrong. Please try again</string>
    <string name="connection_error">Check your internet connection</string>
    <string name="unauthorized_error">User is not authorized</string>
    <string name="generic_error">Something went wrong. Please try again.</string>
    <string name="enter_error">Please restart the app</string>

    <!--My profile (activity_main.xml)-->
    <string name="view_my_contacts">VIEW MY CONTACTS</string>
    <string name="edit_profile">Edit profile</string>
    <string name="settings">Settings</string>
    <string name="log_out">Log out</string>
    <string name="name">Name</string> <!-- also used in Dialog_add_contact.xml -->
    <string name="career">Career</string> <!-- also used in Dialog_add_contact.xml -->
    <string name="home_address">Home address</string>
    <string name="instagram_button">instagram_button</string>
    <string name="linkedin_button">linkedin_button</string>
    <string name="facebook_button">facebook_button</string>
    <string name="profile_photo">profile_photo</string>

    <!--Sing up (activity_auth.xml)-->
    <string name="acquaintance">Let\'s get acquainted</string>
    <string name="filling_out">Fill out the profile and go the application!</string>
    <string name="register">REGISTER</string>
    <string name="agreements">By clicking Register you agree to our Terms \n and Conditions</string>
    <string name="accountQuestion">Already have account?</string>
    <string name="sign_in">Sign in</string>
    <string name="google">GOOGLE</string>
    <string name="or">or</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember me</string>

    <!--Sing up SignUpFragment-->
    <string name="incorrect_email_error">Incorrect E-mail</string>
    <string name="email_already_registered_error">E-mail already registered</string>
    <string name="less_8_symbols_pswd_error">There must be at least %d symbols</string>
    <string name="capital_letter_error">There must be at least one capital letter</string>
    <string name="lowercase_letter_error">There must be at least one lowercase letter</string>
    <string name="special_symbol_error">There must be at least one special symbol</string>
    <string name="numbers_error">There must be at least one number</string>
    <string name="no_error" translatable="false" />

    <!--My contacts (activity_contacts.xml)-->
    <string name="contacts">Contacts</string>
    <string name="add_contact">Add contact</string>
    <string name="cancel_select">Cancel select</string>
    <string name="search_imagebutton">search_imageButton</string>
    <string name="arrow_back_imagebutton">arrow_back_ImageButton</string>

    <!--My contacts ContactsActivity-->
    <string name="undo_deleting_contact_snack_bar_text">Do you want to undo deletion of this contact?</string>
    <string name="undo_deleting_contact_snack_bar_action_text">Undo</string>
    <string name="undo_deleting_contacts_snack_bar_text">Do you want ot undo deleting of this contacts?</string>


    <!-- Detail view -->
    <string name="profile_label">Profile</string>
    <string name="message">MESSAGE</string>
    <string name="user_profile">My Profile</string>

    <!-- Sign up extended-->
    <string name="delete_button_description" translatable="false">to delete all selected items</string>
    <string name="your_profile_data">Your profile data</string>
    <string name="instruction_to_do">Fill out the profile and go to the application</string>
    <string name="user_name">User name</string>
    <string name="mobile_phone">Mobile phone</string>
    <string name="forward">forward</string>
    <string name="cancel">Cancel</string>
    <string name="empty_name_error">Empty name, there must be at least 1 letter</string>
    <string name="incorrect_mobile_phone_error">Incorrect mobile phone number</string>

    <!--Choose profile photo -->
    <string name="open_gallery">Open gallery</string>
    <string name="delete_current_photo">Delete current photo</string>

    <!--Sign in -->
    <string name="hello_label">Hello!</string>
    <string name="enter_your_data_label">Enter your email and password below</string>
    <string name="login_button_text">LOGIN</string>
    <string name="don_t_have_account_label">Don\'t have account?</string>
    <string name="sign_up_label">Sign up</string>
    <string name="forgot_your_password_label">Forgot your password?</string>
    <string name="incorrect_input_data">Check input data</string>

    <!-- Edit profile -->
    <string name="save">SAVE</string>
    <string name="username">Username</string>
    <string name="address">Address</string>
    <string name="date_of_birthday">Date of birthday</string>

    <!-- Splash screen -->
    <string name="greeting">Glad to see you again!</string>

    <!-- Add contacts -->
    <string name="users">Users</string>
    <string name="add">Add</string>
    <string name="try_again">TRY AGAIN</string>
    <string name="no_results_found">No results found</string>
    <string name="you_can_see_more_contacts_on_the_users_page">You can see more contacts on the users page</string>
    <string name="oops_there_are_no_users_with_this_name">Oops! There are no users with this name</string>
    <string name="arrow_top_description">move to top of user list</string>

    <!-- Detail view notification-->
    <string name="message_bt_text">Message</string>
    <string name="add_to_my_contacts">ADD TO MY CONTACTS</string>
    <string name="delete_from_my_contacts">DELETE FROM MY CONTACTS</string>


</resources>