<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/auth"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/screen_color"
    tools:context=".AuthActivity">

    <LinearLayout
        android:id="@+id/ll_acquaintanceAndFillingOut"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/main_margin_side"
        android:layout_marginTop="@dimen/acquaintance_and_filling_out_margin_top"
        android:layout_marginBottom="@dimen/acquaintance_and_filling_out_margin_bottom"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/open_sans"
            android:gravity="center"
            android:text="@string/acquaintance"
            android:textColor="@android:color/white"
            android:textSize="@dimen/large_text_size"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/open_sans"
            android:gravity="center"
            android:paddingTop="@dimen/fill_out_the_profile_padding_top"
            android:text="@string/filling_out"
            android:textColor="@android:color/white"
            android:textSize="@dimen/tiny_text_size" />
    </LinearLayout>

    <Button
        android:id="@+id/bt_register"
        android:layout_width="match_parent"
        android:layout_height="@dimen/register_bt_h"
        android:layout_marginHorizontal="@dimen/main_margin_side"
        android:layout_marginBottom="@dimen/register_margin_bottom"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/register_background"
        android:textStyle="bold"
        android:fontFamily="@font/open_sans"
        android:textSize="@dimen/middle_text_size"
        android:text="@string/register"
        android:letterSpacing="0.15"
        app:backgroundTint="@null"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/main_margin_side"
        android:layout_marginBottom="@dimen/agreements_margin_bottom"
        android:text="@string/agreements"
        android:textSize="@dimen/tiny_text_size"
        android:textColor="@color/agreements_text_color"
        android:fontFamily="@font/open_sans"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>