<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/auth"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/auth_screen_color"
    tools:context="com.example.androidcourseshpp.ui.screens.auth.signup.SignUpFragment">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textViewAcquainted"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/main_margin_side"
        android:layout_marginTop="@dimen/greeting_margin_top_ver"
        android:fontFamily="@font/open_sans"
        android:gravity="center"
        android:text="@string/acquaintance"
        android:textColor="@color/sign_up_greetings_text_color"
        android:textSize="@dimen/large_text_size"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="16dp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textViewFillOutTheProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/main_margin_side"
        android:layout_marginTop="@dimen/fill_out_the_profile_padding_top"
        android:fontFamily="@font/open_sans"
        android:gravity="center"
        android:text="@string/filling_out"
        android:textColor="@color/fill_out_label_color"
        android:textSize="@dimen/tiny_text_size"
        app:layout_constraintTop_toBottomOf="@id/textViewAcquainted" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonRegister"
        android:layout_width="match_parent"
        android:layout_height="@dimen/register_bt_h"
        android:layout_marginHorizontal="@dimen/main_margin_side"
        android:layout_marginBottom="@dimen/register_margin_bottom"
        android:background="@drawable/register_background"
        android:fontFamily="@font/open_sans"
        android:letterSpacing="0.15"
        android:text="@string/register"
        android:textColor="@color/register_text_color"
        android:textSize="@dimen/middle_text_size"
        android:textStyle="bold"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textViewByClicking"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/main_margin_side"
        android:layout_marginBottom="@dimen/agreements_margin_bottom"
        android:fontFamily="@font/open_sans"
        android:gravity="center"
        android:text="@string/agreements"
        android:textColor="@color/agreements_text_color"
        android:textSize="@dimen/tiny_text_size"
        app:layout_constraintBottom_toBottomOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textViewAccountQuestion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/account_question_margin_start"
        android:layout_marginEnd="@dimen/account_question_margin_end"
        android:layout_marginBottom="@dimen/main_margin_side"
        android:fontFamily="@font/open_sans"
        android:text="@string/accountQuestion"
        android:textColor="@color/account_question_text_color"
        android:textSize="@dimen/small_text_size"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textViewSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/sign_in_margin_start"
        android:layout_marginBottom="@dimen/main_margin_side"
        android:fontFamily="@font/open_sans"
        android:text="@string/sign_in"
        android:textColor="@color/sign_in_color"
        android:textSize="@dimen/small_text_size"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/textViewAccountQuestion" />


    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/or_margin_bottom"
        android:fontFamily="@font/open_sans"
        android:text="@string/or"
        android:textColor="@color/or_text_color"
        android:textSize="@dimen/big_text_size"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutEMail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/main_margin_side"
        android:layout_marginTop="@dimen/e_mail_input_margin_top"
        android:layout_marginBottom="@dimen/e_mail_input_margin_bottom"
        android:hint="@string/email"
        android:paddingStart="@dimen/input_text_padding"
        android:textColorHint="@color/input_hint_color"
        android:theme="@style/input_style"
        app:boxBackgroundColor="@color/email_input_background_color"
        app:boxBackgroundMode="filled"
        app:boxStrokeErrorColor="@color/input_line_color"
        app:boxStrokeWidthFocused="@dimen/input_box_stroke_w_focused"
        app:cursorColor="@color/cursor_color_1"
        app:errorEnabled="true"
        app:expandedHintEnabled="false"
        app:helperTextEnabled="true"
        app:helperTextTextAppearance="@style/helper_text_style"
        app:helperTextTextColor="@color/error_text_color"
        app:hintTextAppearance="@style/hint_style"
        app:hintTextColor="@color/input_hint_color"
        app:layout_constraintBottom_toTopOf="@id/buttonGoogle"
        app:layout_constraintTop_toBottomOf="@id/textViewFillOutTheProfile"
        tools:ignore="RtlSymmetry">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextEMail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/open_sans"
            android:inputType="textEmailAddress"
            android:maxLength="40"
            android:paddingTop="@dimen/input_text_edit_padding_top"
            android:paddingBottom="@dimen/input_text_edit_padding_bottom"
            android:textColor="@color/input_text_color"
            android:textSize="@dimen/big_text_size"
            android:textStyle="bold" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/main_margin_side"
        android:layout_marginTop="@dimen/password_margin_top"
        android:hint="@string/password"
        android:paddingStart="@dimen/input_text_padding"
        android:textColorHint="@color/input_hint_color"
        android:theme="@style/input_style"
        app:boxBackgroundColor="@color/email_input_background_color"
        app:boxBackgroundMode="filled"
        app:boxStrokeErrorColor="@color/input_line_color"
        app:boxStrokeWidthFocused="@dimen/input_box_stroke_w_focused"
        app:cursorColor="@color/cursor_color_1"
        app:errorEnabled="true"
        app:expandedHintEnabled="false"
        app:helperTextEnabled="true"
        app:helperTextTextAppearance="@style/helper_text_style"
        app:helperTextTextColor="@color/error_text_color"
        app:hintTextAppearance="@style/hint_style"
        app:hintTextColor="@color/input_hint_color"
        app:layout_constraintTop_toBottomOf="@id/textInputLayoutEMail"
        tools:ignore="RtlSymmetry">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/open_sans"
            android:inputType="textPassword"
            android:maxLength="40"
            android:paddingTop="@dimen/input_text_edit_padding_top"
            android:paddingBottom="@dimen/input_text_edit_padding_bottom"
            android:textColor="@color/input_text_color"
            android:textSize="@dimen/big_text_size"
            android:textStyle="bold" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/comboBoxRememberMe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:button="@drawable/remember_me_selector"
        android:fontFamily="@font/open_sans"
        android:padding="@dimen/remember_me_text_padding"
        android:text="@string/remember_me"
        android:textColor="@color/remember_me_text_color"
        android:textSize="@dimen/small_text_size"
        android:textStyle="bold"
        app:buttonTint="@null"
        app:layout_constraintStart_toStartOf="@id/textInputLayoutPassword"
        app:layout_constraintTop_toBottomOf="@id/textInputLayoutPassword" />

    <com.example.androidcourseshpp.ui.customviews.ViewWithIcon
        android:id="@+id/buttonGoogle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/google_bt_h"
        android:layout_marginHorizontal="@dimen/main_margin_side"
        android:layout_marginBottom="@dimen/google_margin_bottom"
        android:background="@drawable/google_background"
        android:fontFamily="@font/open_sans"
        android:letterSpacing="0.15"
        android:text="@string/google"
        android:textColor="@color/google_text_color"
        android:textSize="@dimen/middle_text_size"
        android:textStyle="bold"
        app:backgroundTint="@null"
        app:icon="@drawable/ic_google"
        app:iconHeight="@dimen/google_bt_icon_h"
        app:iconPaddingEnd="@dimen/google_bt_icon_padding_end"
        app:iconPaddingStart="@dimen/google_bt_icon_padding_start"
        app:iconWidth="@dimen/google_bt_icon_w"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:textPaddingEnd="@dimen/google_bt_text_padding_end"
        app:textPaddingStart="@dimen/google_bt_text_padding_start" />

</androidx.constraintlayout.widget.ConstraintLayout>