<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_topPartOfScreen"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/detail_view_top_view_color"
        app:layout_constraintBottom_toBottomOf="@id/gl_middle_hor"
        app:layout_constraintTop_toTopOf="parent">

    </androidx.appcompat.widget.AppCompatTextView>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_bottomPartOfScreen"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/detail_view_bottom_view_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/gl_middle_hor" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_middle_hor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/profile_label_margin_top"
        android:fontFamily="@font/open_sans"
        android:gravity="center_horizontal"
        android:text="@string/profile_label"
        android:textColor="@color/profile_label_text_color"
        android:textSize="@dimen/big_text_size"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/Iv_profPhoto"
        android:layout_width="@dimen/profile_photo_size"
        android:layout_height="@dimen/profile_photo_size"
        android:layout_marginTop="@dimen/profile_photo_margin_top"
        android:layout_marginBottom="@dimen/profile_photo_margin_bottom"
        android:contentDescription="@string/profile_photo"
        android:src="@drawable/profile_photo"
        app:layout_constraintBottom_toBottomOf="@id/gl_middle_hor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/tv_bottomPartOfScreen"
        app:layout_constraintTop_toTopOf="@id/tv_topPartOfScreen" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/name_margin_horizontal"
        android:layout_marginTop="@dimen/name_margin_top"
        android:layout_marginBottom="@dimen/name_margin_bottom"
        android:fontFamily="@font/open_sans"
        android:gravity="center"
        android:text="@string/name"
        android:textColor="@color/name_text_color"
        android:textSize="@dimen/big_text_size"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/tv_topPartOfScreen"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_career"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/career_margin_horizontal"
        android:layout_marginTop="@dimen/career_margin_top"
        android:fontFamily="@font/open_sans"
        android:gravity="center"
        android:text="@string/career"
        android:textColor="@color/career_text_color"
        android:textSize="@dimen/small_text_size"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/tv_name" />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_homeAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/home_address_margin_horizontal"
        android:layout_marginTop="@dimen/home_address_margin_top"
        android:layout_marginBottom="@dimen/home_address_margin_bottom"
        android:fontFamily="@font/open_sans"
        android:gravity="center_horizontal"
        android:text="@string/home_address"
        android:textColor="@color/home_address_text_color"
        android:textSize="@dimen/small_text_size"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/tv_topPartOfScreen"
        app:layout_constraintTop_toTopOf="@id/tv_topPartOfScreen" />


</androidx.constraintlayout.widget.ConstraintLayout>